--- a/vproapp-deploy.yaml
+++ b/vproapp-deploy.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
         - name: vproapp
-          image: ashish620/vprofileapp:latest
+          image: vprofile/vprofileapp:V1
           ports:
             - name: vproapp-port
               containerPort: 8080
